<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">A2DP Switcher</string>
    <string name="title_activity_main">A2DP</string>
    <string name="confirm_hide_device">Are you sure you want to hide \"%1$s\"?</string>
    <string name="enable_bluetooth">Bluetooth is currently disabled. Enable it to show available devices.</string>
    <string name="enable">Enable</string>
    <string name="menu">Menu</string>

    <!-- Device menu -->
    <string name="device_settings">Device settings</string>
    <string name="menu_hide">Hide from list</string>
    <string name="menu_show">Show in list</string>
    <string name="menu_rename">Rename device…</string>
    <string name="menu_write_tag">Write NFC tag…</string>

    <!-- Label shown in place of the list view when no devices are connected. -->
    <string name="not_paired">Your phone is not paired with any A2DP devices.</string>

    <!-- Label for the check box that controls the "Current device" notification. -->
    <string name="show_notification">Show notification</string>

    <!-- Hint text for the device name text field in the rename dialog. -->
    <string name="device_name">Device name</string>

    <!-- Content description for the check mark image in the connecting dialog. -->
    <string name="connected">Connected</string>

    <!-- Notification -->
    <string name="notification_ticker">A2DP Switcher active</string>
    <string name="touch_to_change">Touch to change streaming device.</string>
    <string name="no_device">No device connected</string>
    <string name="notify_missing_bluetooth">Bluetooth not supported</string>
    <string name="notify_bluetooth_disabled">Bluetooth is disabled</string>
    <string name="notify_missing_audio_service">Audio service not available</string>

    <!-- Failure states -->
    <string name="failure_bluetooth">This device does not support Bluetooth.</string>
    <string name="failure_enable_bluetooth">Failed to enable Bluetooth.</string>
    <string name="failure_bond_device">Failed to pair with Bluetooth device.</string>
    <string name="failure_connect_device">Failed to connect to Bluetooth device.</string>
    <string name="failure_write_tag">Failed to format NFC tag.</string>
    <string name="failure_read_tag">Failed to read NFC tag.</string>

    <!-- Progress states -->
    <string name="progress_reading_tag">Reading NFC tag…</string>
    <string name="progress_enable_bluetooth">Turning on Bluetooth…</string>
    <string name="progress_bond_device">Pairing Bluetooth device…</string>
    <string name="progress_connect_device">Connecting to device…</string>
    <string name="progress_waiting_for_tag">Waiting for tag…</string>

    <!-- Connection states -->
    <string name="state_connected">Connected</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="state_disconnecting">Disconnecting</string>
    <string name="state_playing">Playing</string>
    <string name="signal_strength">(%d dBm)</string>

    <!-- NFC -->
    <string name="connecting">Connecting audio…</string>
    <string name="scan_a_tag">Scan a tag</string>

    <!-- Main menu -->
    <string name="disconnect_all">Disconnect all devices</string>
    <string name="bluetooth_settings">Open Bluetooth settings</string>
    <string name="show_hidden">Show hidden devices</string>
    <string name="settings">Settings</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="_ffff0000">#ffff0000</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="disconnect">Disconnect</string>

    <!-- Backup API key, leave blank to disable backup. -->
    <string name="backup_key"></string>

</resources>